2015-05-27  Christian Groessler  <chris@groessler.org>
* antic.c, cartridge.c, ide.c, input.c: Remove warnings when compiling
  on FreeBSD/i386 10.1 with llvm.


2015-05-10  Christian Groessler  <chris@groessler.org>
* atari_x11.c (PLATFORM_Initialise): Preinitialize image_data buffer to
  shut off valgrind warnings.
* devices.c: Fix for bug #43: Prevent double close of entry in h_fp[]
  array.


2015-04-28  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* antic.c: Fix an infinite recursion with enabled NEW_CYCLE_EXACT, disabled
  PAGED_ATTRIB, when the ANTIC display list is pointed to GTIA registers. The
  recursion was: ANTIC_UpdateScanline -> draw_partial_scanline -> antic_load ->
  MEMORY_CopyFromMem -> MEMORY_GetByte -> MEMORY_HwGetByte -> GTIA_GetByte ->
  ANTIC_UpdateScanline.
  Test case: Sky Writer XEX (length 16827, CRC32 9e0fd2e7) running in 400/800
  mode.


2015-04-27  Christian Groessler  <chris@groessler.org>
* dc/atari_dc.c: Remove obsolete comments.
* dc/version.h: Set A800DCBETA to 2 (2nd beta version).
* DOC/TESTS.dc: New file. Lists tests which should be run before a new
  Atari800DC release.
* DOC/README.dc: Update.
* DOC/CHANGES.dc: Update for Atari800DC 0.79beta2 release.


2015-04-24  Christian Groessler  <chris@groessler.org>
* dc/atari_dc.c: Parse "DOUBLE_BUFFERING" from atari800.cfg, setting the 'db_mode'
  variable. Some other small cleanups.
* dc/atari800.cfg: Add "DOUBLE_BUFFERING" entry.


2015-04-16  Christian Groessler  <chris@groessler.org>
* dc/atari_dc.c: Adapt controller and keyboard detection to new KOS version.


2015-04-11  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* ui.c: Fix a bad cast that resulted in crash when changing display resolution.
* artifact.c: Remove an invalid cast.


2015-04-08  Christian Groessler  <chris@groessler.org>
* sdl/input.c: Fix auto-repeat in emulator menu when using on-screen
  keyboard emulation.


2015-04-08  Christian Groessler  <chris@groessler.org>